--- a/Fuckin Bootstrap/assets/css/style.css
+++ b/Fuckin Bootstrap/assets/css/style.css
@@ -9,9 +9,7 @@ body {
   * {
     box-sizing: border-box;
   }
-  
-  /* general */
-  
+
   .container {
     width: 100%;
     max-width: 960px;
@@ -49,11 +47,8 @@ body {
   h3 {
     font-size: 22px;
   }
-  
-  /* header */
-  
   #masthead {
-    position: relative;
+    position: static;
     z-index: 99;
     width: 100%;
     margin: 0 0 30px;
@@ -210,3 +205,41 @@ body {
     background: #4aaaa5;
     border: 0 none;
   }
+
+  @media (max-width: 980px) {
+      p {
+          font-style: oblique;
+      }
+      #masthead {
+          background: #666666;
+      }
+      #logo {
+          background: #666666;
+      }
+
+}
+@media (max-width: 768px) {
+    #masthead {
+        background: #f1f507;
+    }
+    #logo {
+        background: #f1f507;
+    }
+
+      
+}
+@media (max-width: 640px) {
+
+    #logo {
+        float: none;
+        width: 100%;
+    }
+
+    nav a {
+        float: none;
+        width: 100%;
+    }
+
+   
+    }
+       
